// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Preview(as Form) snapshot 1`] = `
<div
  style="position: relative; background: rgb(74, 74, 74); width: 1200px; height: 1200px;"
>
  <div
    style="margin: 0px auto; width: 1200px; height: 1200px;"
  >
    <div
      style="position: absolute; bottom: 6%; width: 1200px;"
    >
      <div
        style="display: flex; align-items: center; justify-content: space-evenly; position: relative; z-index: 1; left: calc(50% - 75px); width: 150px; height: 40px; box-sizing: border-box; padding: 12px; border-radius: 6px; background-color: rgba(0, 0, 0, 0.45);"
      >
        <div
          style="display: flex; align-items: center;"
        >
          <button
            class="ant-btn css-dev-only-do-not-override-1v613y0 ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-icon-only"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              Minus
            </span>
          </button>
          <span
            class="ant-typography css-dev-only-do-not-override-1v613y0"
            style="color: rgb(255, 255, 255); font-size: 14px; margin: 8px;"
          >
            <strong>
              100
              %
            </strong>
          </span>
          <button
            class="ant-btn css-dev-only-do-not-override-1v613y0 ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-icon-only"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              Plus
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      style="width: 1200px; height: 1200px; position: relative; overflow: auto;"
    >
      <div
        style="transform: scale(1); transform-origin: top left; height: 1px; width: 1px;"
      >
        <div
          style="font-family: 'Roboto'; top: 20px; left: 203.14960629450002px; position: relative; background-image: url(data:image/png;base64,a...); background-size: 793.700787411px 1122.5196850527px; width: 793.700787411px; height: 1122.5196850527px;"
        >
          <div>
            <div
              class="selectable"
              id="1"
              style="position: absolute; cursor: pointer; height: 56.692913386499995px; width: 377.95275591px; top: 75.590551182px; left: 75.590551182px; transform: rotate(0deg); opacity: 1; outline: 1px dashed #1677ff;"
              title="field1"
            >
              <div
                style="height: 100%; width: 100%;"
              />
            </div>
          </div>
          <div>
            <div
              class="selectable"
              id="2"
              style="position: absolute; cursor: pointer; height: 151.181102364px; width: 377.95275591px; top: 132.2834645685px; left: 75.590551182px; transform: rotate(0deg); opacity: 1; outline: 1px dashed #1677ff;"
              title="field2"
            >
              <div
                style="height: 100%; width: 100%;"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Preview(as Viewer) snapshot 1`] = `
<div
  style="position: relative; background: rgb(74, 74, 74); width: 1200px; height: 1200px;"
>
  <div
    style="margin: 0px auto; width: 1200px; height: 1200px;"
  >
    <div
      style="position: absolute; bottom: 6%; width: 1200px;"
    >
      <div
        style="display: flex; align-items: center; justify-content: space-evenly; position: relative; z-index: 1; left: calc(50% - 75px); width: 150px; height: 40px; box-sizing: border-box; padding: 12px; border-radius: 6px; background-color: rgba(0, 0, 0, 0.45);"
      >
        <div
          style="display: flex; align-items: center;"
        >
          <button
            class="ant-btn css-dev-only-do-not-override-1v613y0 ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-icon-only"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              Minus
            </span>
          </button>
          <span
            class="ant-typography css-dev-only-do-not-override-1v613y0"
            style="color: rgb(255, 255, 255); font-size: 14px; margin: 8px;"
          >
            <strong>
              100
              %
            </strong>
          </span>
          <button
            class="ant-btn css-dev-only-do-not-override-1v613y0 ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-icon-only"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              Plus
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      style="width: 1200px; height: 1200px; position: relative; overflow: auto;"
    >
      <div
        style="transform: scale(1); transform-origin: top left; height: 1px; width: 1px;"
      >
        <div
          style="font-family: 'Roboto'; top: 20px; left: 203.14960629450002px; position: relative; background-image: url(data:image/png;base64,a...); background-size: 793.700787411px 1122.5196850527px; width: 793.700787411px; height: 1122.5196850527px;"
        />
      </div>
    </div>
  </div>
</div>
`;
